Repaire bug: info layer and contact layer aren't visible when loading page

--- a/styleSheet.css
+++ b/styleSheet.css
@@ -65,6 +65,7 @@ a {
   position: absolute;
   top: 0;
   right: 0;
+  z-index: 1;
   bottom: 0;
   left: 0;
   width: 100vw;
@@ -116,7 +117,7 @@ a {
   background-color: black;
   background-color:rgba(0, 0, 0, 0.6);
   border: 0;
-  z-index: 20;
+  z-index: 0;
   height: 100vh;
   width: 100vw;
 }
@@ -128,7 +129,6 @@ a {
   bottom: 7.5vh;
   border: 0;
   position:absolute;
-  z-index:100;
   background-color: black;
   opacity: 1.0;
 }
